[gd_scene load_steps=13 format=3 uid="uid://dlcimi813wn0k"]

[ext_resource type="Script" uid="uid://bqt1n2ga3huoq" path="res://scripts/main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://bgtbx6f2d87cc" path="res://assets/backgrounds/Green.png" id="2_fu7sn"]
[ext_resource type="Texture2D" uid="uid://bylofo3pfcwug" path="res://assets/ui/back.png" id="3_fu7sn"]
[ext_resource type="FontFile" uid="uid://c3ushtlklth6y" path="res://fonts/Daydream DEMO.otf" id="3_nlkkf"]
[ext_resource type="FontFile" uid="uid://viwb2r2lx7xr" path="res://fonts/Pixel Game.otf" id="4_jix8l"]
[ext_resource type="Texture2D" uid="uid://bkpfavrty46f" path="res://assets/ui/level_button.png" id="4_qe12f"]
[ext_resource type="Texture2D" uid="uid://cumiie5nduodi" path="res://assets/ui/locked_button.png" id="5_qe12f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qtwp"]
texture = ExtResource("4_qe12f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlkkf"]
texture = ExtResource("4_qe12f")
modulate_color = Color(0.79624295, 0.796243, 0.7962429, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dy7ct"]
texture = ExtResource("5_qe12f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("3_fu7sn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu7sn"]
texture = ExtResource("3_fu7sn")
modulate_color = Color(0.8175222, 0.81752074, 0.8175216, 1)

[node name="MainMenu" type="Node"]
script = ExtResource("1_7vrkn")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fu7sn")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.5
offset_top = -64.0
offset_right = 331.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Level1" type="Button" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("3_nlkkf")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxTexture_nlkkf")
text = "1"

[node name="Level2" type="Button" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("3_nlkkf")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nlkkf")
theme_override_styles/hover = SubResource("StyleBoxTexture_nlkkf")
text = "2"

[node name="Level3" type="Button" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("3_nlkkf")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxTexture_dy7ct")
text = "
"

[node name="Back" type="Button" parent="."]
texture_filter = 1
offset_left = 28.0
offset_top = 24.0
offset_right = 118.0
offset_bottom = 77.0
theme_override_styles/normal = SubResource("StyleBoxTexture_jix8l")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxTexture_fu7sn")
theme_override_styles/disabled = SubResource("StyleBoxTexture_jix8l")
theme_override_styles/focus = SubResource("StyleBoxTexture_jix8l")
metadata/_edit_lock_ = true

[node name="SelectLevel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 21.0
offset_right = 211.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 80
text = "Select Level"
metadata/_edit_lock_ = true

[connection signal="pressed" from="HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
